:bug: Changes bug

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 </head>
 <body>
     <div class="container">
-    <p id="result" class="hide">Demo Message</p>
-    <button id="start">Start Game</button>
+        <p id="result" class="hide">Demo Message</p>
+        <button id="start">Start Game</button>
     </div>
-    <div class="wrapper hide">
-    <div class="simon">
-        <div class="vert color-part"></div>
-        <div class="rouge color-part"></div>
-        <div class="bleu color-part"></div>
-        <div class="jaune color-part"></div>
-        <div id="count">00</div>
-    </div>
+    <div class="add hide">
+        <div class="simon">
+            <div class="vert color-part"></div>
+            <div class="rouge color-part"></div>
+            <div class="bleu color-part"></div>
+            <div class="jaune color-part"></div>
+            <div id="count">00</div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
